Converted to Gradle project. Added gitignore

--- a/Intro/build.gradle
+++ b/Intro/build.gradle
@@ -1,5 +1,6 @@
+//-*- mode: groovy -*-mode: groovy
 task hello {
-doLast {
-println "Hello, Gradle"
-}
+    doLast {
+        println "Hello, Gradle"
+    }
 }
