--- a/mytasks/build.gradle
+++ b/mytasks/build.gradle
@@ -1,2 +1,8 @@
 project.task("Task1")
 task("Task2")
+task "Task3"
+task Task4
+
+Task4.description = "Task4 description"
+
+Task4.doLast {println "This is Task 4"}
