--- a/mytasks/build.gradle
+++ b/mytasks/build.gradle
@@ -6,3 +6,7 @@ task Task4
 Task4.description = "Task4 description"
 
 Task4.doLast {println "This is Task 4"}
+
+Task3 {"This is task 3"}
+
+task Task5 {println "This is task 5"}
