--- a/mytasks/build.gradle
+++ b/mytasks/build.gradle
@@ -10,3 +10,9 @@ Task4.doLast {println "This is Task 4"}
 Task3 {"This is task 3"}
 
 task Task5 {println "This is task 5"}
+task Task6 {
+    description "This is task 6"
+    doLast {
+        println "This is task 6"
+    }
+}
