--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 def projectVersion = "2.0"
+//to be available among all projects
+//project.ext.projectVersion = "3.0"
+
 project.task("Task1")
 task("Task2")
 task "Task3"
