--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,13 @@
-def projectVersion = "2.0"
-//to be available among all projects
-//project.ext.projectVersion = "3.0"
+// << was replaced with doFirst
+task taskA doFirst {println "task A"}
+task taskB doFirst {println "task B"}
+task taskC doFirst {println "task C"}
+task taskD doFirst {println "task D"}
+task taskE doFirst {println "task E"}
+task taskF doFirst {println "task F"}
 
-project.task("Task1")
-task("Task2")
-task "Task3"
-task Task4
-
-Task4.description = "Task4 description"
-
-Task4.doLast {println "This is Task 4"}
-
-Task3 {"This is task 3"}
-
-task Task5 {println "This is task 5"}
-task Task6 {
-    description "This is task 6"
-    doFirst{
-        println "Task 6 - First"
-    }
-    doLast {
-        println "This is task 6 - version $projectVersion"
-    }
-}
-Task6.doFirst {
-    println "Another first"
-}
-
-Task6.dependsOn(Task5)
-Task6.dependsOn(Task3)
-Task5.dependsOn(Task4)
+taskA.doFirst {println "This is task A"}
+taskA.dependsOn taskB
+taskA.dependsOn taskC, taskD
+taskC.dependsOn taskE
+taskD.dependsOn taskE
