Added gradle properties

--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,2 @@
-def contentSpec = copySpec {
-    //exclude 'IMG_0052.JPG', 'IMG_0054.JPG'
-
-    exclude {it.file.name.startsWith('IMG')}
-
-    from 'copyFrom'
-}
-
-task copyImages2 (type: Copy) {
-    with contentSpec
-    into 'dest'
-}
-
-task copyImages (type: Copy){
-    exclude 'IMG_0052.JPG', 'IMG_0054.JPG', main, test
-    from 'copyFrom'
-    into 'dest'
-}
-
-task copyConfig (type: Copy) {
-    include 'web.xml'
-    from 'copyFrom'
-    into 'configTo'
-    expand (
-            [resourceRefName: 'jdbc/JacketDB']
-    )
-}
-
-
-
-
-
+apply plugin: 'java'
+version = '1.0 SNAPSHOT'
